fix: contrast on checkbox and radio buttons

--- a/src/scss/_custom-forms.scss
+++ b/src/scss/_custom-forms.scss
@@ -19,7 +19,7 @@
 .custom-control-label::before,
 .custom-control-input:focus ~ .custom-control-label::before {
   border: 0;
-  box-shadow: inset 0 0 0 $border-width $silver;
+  box-shadow: inset 0 0 0 $border-width $aluminium;
 }
 
 .custom-control-label {
